syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

package ProjectOrigin.Electricity.v1;

message ConsumptionIssuedEvent {
    ProjectOrigin.Common.v1.FederatedStreamId certificate_id = 1;
    DateInterval period = 2;
    string grid_area = 3;
    bytes gsrn_hash = 4;
    Commitment quantity_commitment = 5;
    PublicKey owner_public_key = 6;
}

message ProductionIssuedEvent {
    ProjectOrigin.Common.v1.FederatedStreamId certificate_id = 1;
    DateInterval period = 2;
    string grid_area = 3;
    string fuel_code = 4;
    string tech_code = 5;
    bytes gsrn_hash = 6;
    Commitment quantity_commitment = 7;
    CommitmentPublication quantity_publication = 8;
    PublicKey owner_public_key = 9;
}

message SlicedEvent{
    message Slice {
        Commitment quantity = 1;
        PublicKey new_owner = 2;
    }

    ProjectOrigin.Common.v1.FederatedStreamId certificate_id = 1;
    SliceId source_slice = 2;
    repeated Slice new_slices = 3;
    bytes sum_proof = 4;
}

message AllocatedEvent {
    ProjectOrigin.Common.v1.Uuid AllocationId = 1;
    ProjectOrigin.Common.v1.FederatedStreamId  ProductionCertificateId = 2;
    ProjectOrigin.Common.v1.FederatedStreamId  ConsumptionCertificateId = 3;
    SliceId ProductionSourceSlice = 4;
    SliceId ConsumptionSourceSlice = 5;
    bytes EqualityProof = 6;
}

message ClaimedEvent {
    ProjectOrigin.Common.v1.FederatedStreamId  CertificateId = 1;
    ProjectOrigin.Common.v1.Uuid AllocationId = 2;
}

message DateInterval {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}

message Commitment {
    bytes content = 1;
    bytes range_proof = 2;
}

message CommitmentPublication {
    uint32 message = 1;
    bytes r_value = 2;
}

message PublicKey {
    bytes content = 1;
}

message SliceId {
    bytes hash = 1;
}
